--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+PAS_AD=administrador
 DB_MONGO=mongodb+srv://userAdminBarber:DdwowRdY2PhOyPqF@barberapp.jk4hd.mongodb.net/BarberApp
 FRASE_SECRETA=BarberApp
